fixed dark mode theme

--- a/src/components/pages/GetStarted/GetStarted.scss
+++ b/src/components/pages/GetStarted/GetStarted.scss
@@ -5,6 +5,7 @@
 
 .get_started {
   text-align: center;
+  min-height: 100vh;
 }
 
 .get_started_img {
@@ -56,16 +57,16 @@
     border-radius: 10px;
     border: none;
     color: #fff;
-    box-shadow:
-      rgba(0, 0, 0, 0.25) 0px 54px 64px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px,
-      rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px,
-      rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 64px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px,
+    rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px,
+    rgba(0, 0, 0, 0.09) 0px -3px 5px;
     min-width: 50%;
     font-size: 15px;
   }
 }
+
 @media screen and (min-width: 391px) {
   .get_started_text {
     button {
